--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3054,6 +3054,53 @@
   },
   {
    "cell_type": "markdown",
+   "id": "39d08d64-d355-40aa-9ae2-fd982b3f2b5f",
+   "metadata": {},
+   "source": [
+    "**Error Distribution**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ec1d425-bbf7-4219-a104-af340bf7eefd",
+   "metadata": {},
+   "source": [
+    "Histograms of absolute and percentage error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b36d8f2b-9c82-4599-9db0-3c33301923c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the figure size \n",
+    "plt.figure(figsize=(12, 6))\n",
+    "\n",
+    "# Create histogram of absolute errors\n",
+    "plt.subplot(1, 2, 1)\n",
+    "sns.histplot(data=df_test, x=\"Absolute Error\", bins=30)\n",
+    "plt.title(\"Distribution of Absolute Errors\")\n",
+    "plt.xlabel(\"Absolute Error\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "\n",
+    "# Create histogram of percentage errors\n",
+    "plt.subplot(1, 2, 2)\n",
+    "sns.histplot(data=df_test, x=\"Error (%)\", bins=30)\n",
+    "plt.title(\"Distribution of Percentage Errors\")\n",
+    "plt.xlabel(\"Error (%)\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "\n",
+    "# Adjust layout to prevent overlap\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "661472f1-6c53-4270-a381-f96641708735",
    "metadata": {},
    "source": [
