In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Prediction Examples, add mean and median error in error distribiton subsection

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3065,7 +3065,7 @@
    "id": "2ec1d425-bbf7-4219-a104-af340bf7eefd",
    "metadata": {},
    "source": [
-    "Histograms of absolute and percentage error"
+    "Histograms of absolute and percentage error:"
    ]
   },
   {
@@ -3097,6 +3097,27 @@
     "\n",
     "# Show the plot\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26c74bb7-0575-4b71-af23-9b5f57384141",
+   "metadata": {},
+   "source": [
+    "Mean and median error:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2a7d3bf-16fc-4b55-9e78-a0c4e588e32a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Mean Absolute Error: {df_test['Absolute Error'].mean():.2f}\")\n",
+    "print(f\"Median Absolute Error: {df_test['Absolute Error'].median():.2f}\")\n",
+    "print(f\"Mean Error (%): {df_test['Error (%)'].mean():.2f}%\")\n",
+    "print(f\"Median Error (%): {df_test['Error (%)'].median():.2f}%\")"
    ]
   },
   {
