--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2768,6 +2768,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2e13ccf3-89d6-487b-87c8-4e7f0217405a",
+   "metadata": {},
+   "source": [
+    "**Metrics**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d65d565f-4c82-430f-89e3-cf03f326696f",
@@ -2779,7 +2787,7 @@
     "y_val_pred = final_model.predict(X_val_transformed)\n",
     "y_test_pred = final_model.predict(X_test_transformed)\n",
     "\n",
-    "# Evaluate model\n",
+    "# Calculate evaluation metrics\n",
     "train_rmse = mean_squared_error(y_train, y_train_pred, squared=False)\n",
     "val_rmse = mean_squared_error(y_val, y_val_pred, squared=False)\n",
     "test_rmse = mean_squared_error(y_test, y_test_pred, squared=False)\n",
@@ -2798,8 +2806,16 @@
     "    \"Test\": [test_rmse, test_mape, test_r2]\n",
     "})\n",
     "\n",
-    "# Show evaluation metrics\n",
+    "# Show table\n",
     "print(final_model_evaluation.round(2))  # round metrics to 2 decimals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8dc71535-72da-4e7c-aef3-804f312466c9",
+   "metadata": {},
+   "source": [
+    "**Residual Plots**"
    ]
   },
   {
