--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2853,6 +2853,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "831a7ae0-8f44-466c-b308-1d9e26ecc944",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combine X_test, y_test, and y_test_pred into one DataFrame\n",
+    "df_test = X_test.copy()  \n",
+    "df_test[\"Actual\"] = y_test\n",
+    "df_test[\"Predicted\"] = y_test_pred\n",
+    "\n",
+    "# Calculate errors \n",
+    "df_test[\"Error\"] = df_test[\"Predicted\"] - df_test[\"Actual\"]\n",
+    "df_test[\"Absolute Error\"] = np.abs(df_test[\"Actual\"] - df_test[\"Predicted\"])\n",
+    "df_test[\"Error (%)\"] = (df_test[\"Actual\"] - df_test[\"Predicted\"]) / df_test[\"Actual\"] * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d2a7d3bf-16fc-4b55-9e78-a0c4e588e32a",
    "metadata": {},
    "outputs": [],
