In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Prediction Examples section, update code to drop features that are not top 5 most important

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3080,18 +3080,12 @@
    "outputs": [],
    "source": [
     "# Get top 5 most important features\n",
-    "# Note: Ensure feature_importance_df was created in the feature importance section \n",
+    "# Note: Ensure feature_importance_df was created in feature importance section \n",
     "top5_features = feature_importance_df.sort_values(\"importance\", ascending=False).head(5)[\"feature\"]\n",
     "\n",
-    "# Combine X_test, y_test, and y_test_pred into one DataFrame\n",
-    "df_test = X_test[top5_features].copy()  # Only select the 5 most important features\n",
-    "df_test[\"Actual\"] = y_test\n",
-    "df_test[\"Predicted\"] = y_test_pred\n",
-    "\n",
-    "# Calculate errors \n",
-    "df_test[\"Error\"] = df_test[\"Predicted\"] - df_test[\"Actual\"]\n",
-    "df_test[\"Absolute Error\"] = np.abs(df_test[\"Actual\"] - df_test[\"Predicted\"])\n",
-    "df_test[\"Error (%)\"] = (df_test[\"Actual\"] - df_test[\"Predicted\"]) / df_test[\"Actual\"] * 100\n",
+    "# Drop features not in top 5 features\n",
+    "# Note: Ensure df_test was created in model evaluation section \n",
+    "df_test = df_test.drop(columns=(set(df_test.columns) - set(top5_features)))\n",
     "\n",
     "# Best cases: Top 10 cases with smallest errors\n",
     "print(\"Best cases:\")\n",
