In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Prediction Examples, update code to keep top 5 features and error metrics

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3083,9 +3083,10 @@
     "# Note: Ensure feature_importance_df was created in feature importance section \n",
     "top5_features = feature_importance_df.sort_values(\"importance\", ascending=False).head(5)[\"feature\"]\n",
     "\n",
-    "# Drop features not in top 5 features\n",
+    "# Keep only top 5 features and error metrics\n",
     "# Note: Ensure df_test was created in model evaluation section \n",
-    "df_test = df_test.drop(columns=(set(df_test.columns) - set(top5_features)))\n",
+    "columns_to_keep = list(top5_features) + [\"Actual\", \"Predicted\", \"Error\", \"Absolute Error\", \"Error (%)\"]\n",
+    "df_test = df_test[columns_to_keep]\n",
     "\n",
     "# Best cases: Top 10 cases with smallest errors\n",
     "print(\"Best cases:\")\n",
