In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Prediction Examples, capitalize heading to Identify Best, Worst, and Typical Cases

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3069,7 +3069,7 @@
    "id": "bfbb9e4a-e3f6-4107-ae0e-5ffe1d4fa3ac",
    "metadata": {},
    "source": [
-    "**Identify best, worst, and typical cases**"
+    "**Identify Best, Worst, and Typical Cases**"
    ]
   },
   {
