In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Evaluation, add markdown comment for residual plots

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2815,7 +2815,8 @@
    "id": "8dc71535-72da-4e7c-aef3-804f312466c9",
    "metadata": {},
    "source": [
-    "**Residual Plots**"
+    "**Residual Plots**  \n",
+    "Plots for predicted vs. actual values and residuals vs. actual values for validation and test data."
    ]
   },
   {
