In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Evaluation, add markdown comment for metrics

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2772,7 +2772,8 @@
    "id": "2e13ccf3-89d6-487b-87c8-4e7f0217405a",
    "metadata": {},
    "source": [
-    "**Metrics**"
+    "**Metrics**  \n",
+    "Evaluate model performance using metrics (RMSE, MAPE, R-squared) for training, validation, and test data."
    ]
   },
   {
@@ -2816,7 +2817,7 @@
    "metadata": {},
    "source": [
     "**Residual Plots**  \n",
-    "Plots for predicted vs. actual values and residuals vs. actual values for validation and test data."
+    "Plot predicted vs. actual values and residuals vs. actual values for validation and test data."
    ]
   },
   {
