In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Evaluation, update code for features to plot in scatterplot matrix between features and absolute error in error analysis subsection

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2937,8 +2937,8 @@
     "# Scatterplot matrix between absolute error and each feature\n",
     "plt.figure(figsize=(12, 12))\n",
     "\n",
-    "# List of numerical and boolean columns \n",
-    "features_to_plot = numerical_columns + boolean_columns\n",
+    "# Features to plot: All numerical and boolean columns excluding the target variable\n",
+    "features_to_plot = [col for col in numerical_columns + boolean_columns if col != \"numerical_target\"]\n",
     "\n",
     "# Iterate over the features to plot\n",
     "for i, feature in enumerate(features_to_plot):\n",
