In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Evaluation, update scatterplot matrix between features and absolute error in error analysis subsection to dynamically adjust to the number of features to plot

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2935,15 +2935,24 @@
    "outputs": [],
    "source": [
     "# Scatterplot matrix between absolute error and each feature\n",
-    "plt.figure(figsize=(12, 12))\n",
+    "import math\n",
     "\n",
     "# Features to plot: All numerical and boolean columns excluding the target variable\n",
     "features_to_plot = [col for col in numerical_columns + boolean_columns if col != \"numerical_target\"]\n",
     "\n",
+    "# Define the number of columns for the grid\n",
+    "num_cols = 4  \n",
+    "\n",
+    "# Calculate the number of rows needed\n",
+    "num_rows = math.ceil(len(features_to_plot) / num_cols)\n",
+    "\n",
+    "# Set the figure size dynamically based on the grid size\n",
+    "plt.figure(figsize=(num_cols * 4, num_rows * 4))\n",
+    "\n",
     "# Iterate over the features to plot\n",
     "for i, feature in enumerate(features_to_plot):\n",
     "    # Create a subplot in a 3x3 grid \n",
-    "    plt.subplot(3, 3, i + 1)\n",
+    "    plt.subplot(num_rows, num_cols, i + 1)\n",
     "    \n",
     "    # Create a scatterplot between the current feature and the absolute error\n",
     "    sns.scatterplot(data=df_test, x=feature, y=\"Absolute Error\")\n",
