In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Evaluation, update documenation comment for scatterplot matrix between features and absolute error in error analysis subsection

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2934,7 +2934,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scatterplot matrix between absolute error and each feature\n",
+    "# Scatterplot matrix between features and absolute error\n",
     "import math\n",
     "\n",
     "# Features to plot: All numerical and boolean columns excluding the target variable\n",
