--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -54,16 +54,16 @@
    "metadata": {},
    "source": [
     "**Predicting Rental Prices**  \n",
-    "This project  aims to build a machine learning model to predict rental prices for properties in [City/Region, e.g., Berlin]. The model will enable stakeholders like landlords, tenants, investors, and market analysts to make informed, data-driven decisions about rental prices.\n",
+    "This project  aims to build a machine learning model to predict rental prices for properties in Berlin. The model will enable stakeholders like landlords, tenants, investors, and market analysts to make informed, data-driven decisions about rental prices.\n",
     "\n",
     "**Problem**  \n",
     "Determining fair rental prices is challenging due to the many factors involved, such as property characteristics (e.g., size, bedrooms, amenities), location (e.g., neighborhood, proximity to public transport), and market dynamics (e.g., trends, seasonal demand). Traditional estimation methods can be subjective, but machine learning provides a more data-driven and reliable approach.\n",
     "\n",
     "**Data**  \n",
-    "The dataset comprises historical rental listings collected from [Data Source, e.g., Zillow] and consists of:\n",
+    "The dataset comprises historical rental listings collected from Zillow and consists of:\n",
     "\n",
-    "- Target Variable: Monthly rent in [Currency, e.g., € or $].\n",
-    "- Features: Property size (m² or sqft), number of bedrooms and bathrooms, property type (e.g., apartment), neighborhood, built year, furnishing, heating type, amenities.\n",
+    "- Target Variable: Monthly rent in €.\n",
+    "- Features: Property size in m², number of bedrooms and bathrooms, property type (e.g., apartment), neighborhood (e.g., Charlottenburg), built year, furnishing, heating type, amenities (e.g., balcony).\n",
     "- Example Data:\n",
     "\n",
     "| Size (m²)  | Bedrooms | Bathrooms | Property Type      | Neighborhood     | Built Year | Furnishing | Heating  | Amenities          | Monthly Rent (€) |\n",
@@ -93,9 +93,9 @@
     "\n",
     "**Technical Requirements**  \n",
     "The project must meet the following technical requirements:  \n",
-    "- Data Preprocessing: Load, clean, transform, and save data using Python and libraries like Pandas and scikit-learn.\n",
+    "- Data Preprocessing: Load, clean, transform, and save data using Python and libraries like Pandas and Scikit-learn.\n",
     "- Exploratory Data Analysis (EDA): Analyze descriptive statistics and visualize distributions with Pandas, NumPy, Seaborn, and Matplotlib.\n",
-    "- Modeling: Train and evaluate different machine learning models using scikit-learn and XGBoost.  \n",
+    "- Modeling: Train and evaluate different machine learning models using Scikit-learn and XGBoost.  \n",
     "- Deployment: Deploy the final model as a REST API for easy integration with existing platforms.  \n",
     "    - Scalability: The model should handle datasets of up to 1 million data points and deliver predictions in under 2 minutes.  \n",
     "    - Cloud Infrastructure: Use cloud platforms (e.g., AWS, Microsoft Azure, Google Cloud Platform) for scalable deployment."
