In machine_learning_template.ipynb, in Data Loading > MySQL section, update markdown and code comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -218,7 +218,8 @@
    "id": "b63482d3-000f-4235-a16a-51d6d8a08dba",
    "metadata": {},
    "source": [
-    "## MySQL"
+    "## MySQL\n",
+    "Load data from a MySQL database table into a Pandas DataFrame."
    ]
   },
   {
@@ -241,7 +242,7 @@
     "    # Create an SQLAlchemy engine for interacting with the MySQL database\n",
     "    engine = create_engine(f\"mysql+mysqlconnector://{sql_username}:{sql_password}@{mysql_host}:{mysql_port}/{mysql_database_name}\")\n",
     "    \n",
-    "    # Load data from MySQL database into a Pandas DataFrame\n",
+    "    # Load data from MySQL into DataFrame\n",
     "    with engine.connect() as connection:\n",
     "        df = pd.read_sql(f\"SELECT * FROM {mysql_table_name}\", con=connection)\n",
     "    print(\"Data loaded successfully.\")\n",
