In machine_learning_template.ipynb, rename F1 score to F1-score consistently throughout the template

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -33,7 +33,7 @@
     "  - Visualize distributions, correlations, and relationships using `seaborn` and `matplotlib`.\n",
     "- **Modeling**:\n",
     "  - Train baseline models and perform hyperparameter tuning for regression and classification tasks with `sklearn` and `xgboost`.\n",
-    "  - Evaluate regression (RMSE, MAPE, R-squared) and classification models (accuracy, precision, recall, F1 score).\n",
+    "  - Evaluate regression (RMSE, MAPE, R-squared) and classification models (accuracy, precision, recall, F1-score).\n",
     "  - Visualize feature importance and save the final model with `pickle`.\n",
     "\n",
     "This template provides a flexible, customizable foundation for various datasets and use cases, making it an ideal starting point for efficient and reproducible machine learning projects. It is specifically tailored to structured tabular data (e.g., .csv, .xls, or SQL tables) using Pandas and Scikit-learn. It is not optimized for text, image, or time series data, which require  specialized preprocessing, models, and tools (e.g., TensorFlow, PyTorch)."
@@ -3807,7 +3807,7 @@
     "- Accuracy\n",
     "- Precision\n",
     "- Recall\n",
-    "- F1 score"
+    "- F1-score"
    ]
   },
   {
@@ -3876,9 +3876,9 @@
    "metadata": {},
    "source": [
     "## Hyperparameter Tuning  \n",
-    "Based on baseline model training, the following models outperformed the other candidates on evaluation metrics such as accuracy, recall, precision, and F1 score on the validation data and were selected for hyperparameter tuning:\n",
+    "Based on baseline model training, the following models outperformed the other candidates on evaluation metrics such as accuracy, recall, precision, and F1-score on the validation data and were selected for hyperparameter tuning:\n",
     "- Model 1 (e.g., Random Forest Classifier)  \n",
-    "  *Justification example*: Demonstrated high recall and F1 score, indicating robust performance across multiple classes and strong handling of imbalanced datasets. \n",
+    "  *Justification example*: Demonstrated high recall and F1-score, indicating robust performance across multiple classes and strong handling of imbalanced datasets. \n",
     "- Model 2 (e.g., XGBoost Classifier)  \n",
     "  *Justification example*: Consistently high accuracy across classes and strong overall evaluation metric scores, making it a competitive option for fine-tuning."
    ]
@@ -4632,7 +4632,7 @@
     "    - Perform hyperparameter tuning using grid search with `sklearn` `GridSearchCV` or random search with `RandomizedSearchCV`.\n",
     "- **Model evaluation**:\n",
     "    - Regression task: Use evaluation metrics such as RMSE, MAPE, or R-squared with `sklearn` `mean_squared_error`, `mean_absolute_percentage_error`, or `r2_score`.\n",
-    "    - Classification task: Use metrics like accuracy, precision, recall, or F1 score with `sklearn` `classification_report`, `confusion_matrix`, and `ConfusionMatrixDisplay`.\n",
+    "    - Classification task: Use metrics like accuracy, precision, recall, or F1-score with `sklearn` `classification_report`, `confusion_matrix`, and `ConfusionMatrixDisplay`.\n",
     "- **Feature importance**:\n",
     "    - Visualize feature importances using `seaborn` and `matplotlib` or `xgboost` `plot_importance`.\n",
     "- **Save the final model**:\n",
