In machine_learning_template.ipynb, in Modeling (Classification) > Final Model > Model Evaluation section, create DataFrame with features, actual and predicted labels and calculate misclassifications

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -4391,7 +4391,23 @@
    "metadata": {},
    "source": [
     "**Error Analysis: Features Relationships with Misclassifications**  \n",
-    "Explore relationships between the features and misclassifications through correlations and scatterplots."
+    "Explore relationships between the features and misclassifications through correlations and scatterplots on the test data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "898f0271-132c-43f9-bcf5-133d922680b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combine X_test, y_test, and y_test_pred into one DataFrame\n",
+    "df_test = X_test.copy()  \n",
+    "df_test[\"Actual\"] = y_test\n",
+    "df_test[\"Predicted\"] = y_test_pred\n",
+    "\n",
+    "# Calculate misclassifications \n",
+    "df_test[\"Misclassification\"] = df_test[\"Predicted\"] != df_test[\"Actual\"]"
    ]
   },
   {
