In machine_learning_template.ipynb, in Modeling (Classification) > Final Model > Model Evaluation section, show correlations between features and misclassifications

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -4407,7 +4407,11 @@
     "df_test[\"Predicted\"] = y_test_pred\n",
     "\n",
     "# Calculate misclassifications \n",
-    "df_test[\"Misclassification\"] = df_test[\"Predicted\"] != df_test[\"Actual\"]"
+    "df_test[\"Misclassification\"] = df_test[\"Predicted\"] != df_test[\"Actual\"]\n",
+    "\n",
+    "# Correlations between features and misclassifications\n",
+    "# Note: Ensure numerical_columns and boolean_columns were defined in exploratory data analysis section \n",
+    "df_test[numerical_columns + boolean_columns].corr()[\"Misclassification\"].sort_values(ascending=False)"
    ]
   },
   {
