In machine_learning_template.ipynb, in Modeling (Classification) > Final Model > Model Evaluation section, add scatterplot matrix between features and misclassifications

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2943,7 +2943,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scatterplot matrix between features and absolute error\n",
+    "# Scatterplot matrix between (numerical or boolean) features and absolute error\n",
     "import math\n",
     "\n",
     "# Features to plot: All numerical and boolean columns excluding the target variable\n",
@@ -2960,7 +2960,7 @@
     "\n",
     "# Iterate over the features to plot\n",
     "for i, feature in enumerate(features_to_plot):\n",
-    "    # Create a subplot in a 3x3 grid \n",
+    "    # Create a subplot in the grid \n",
     "    plt.subplot(num_rows, num_cols, i + 1)\n",
     "    \n",
     "    # Create a scatterplot between the current feature and the absolute error\n",
@@ -4412,6 +4412,48 @@
     "# Correlations between features and misclassifications\n",
     "# Note: Ensure numerical_columns and boolean_columns were defined in exploratory data analysis section \n",
     "df_test[numerical_columns + boolean_columns].corr()[\"Misclassification\"].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "747867bb-948e-433d-a47e-9faf41d7b2b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scatterplot matrix between (numerical or boolean) features and misclassifications\n",
+    "import math\n",
+    "\n",
+    "# Features to plot: All numerical and boolean columns excluding the target variable\n",
+    "features_to_plot = [col for col in numerical_columns + boolean_columns if col != \"categorical_target\"]\n",
+    "\n",
+    "# Define the number of columns for the grid\n",
+    "num_cols = 4  \n",
+    "\n",
+    "# Calculate the number of rows needed\n",
+    "num_rows = math.ceil(len(features_to_plot) / num_cols)\n",
+    "\n",
+    "# Set the figure size dynamically based on the grid size\n",
+    "plt.figure(figsize=(num_cols * 4, num_rows * 4))\n",
+    "\n",
+    "# Iterate over the features to plot\n",
+    "for i, feature in enumerate(features_to_plot):\n",
+    "    # Create a subplot in the grid \n",
+    "    plt.subplot(num_rows, num_cols, i + 1)\n",
+    "    \n",
+    "    # Create a scatterplot between the current feature and the misclassifications\n",
+    "    sns.scatterplot(data=df_test, x=feature, y=\"Misclassification\")\n",
+    "    \n",
+    "    # Add title and axis labels\n",
+    "    plt.title(f\"Misclassifications by {feature}\")\n",
+    "    plt.xlabel(f\"{feature}\")\n",
+    "    plt.ylabel(\"Misclassification\")\n",
+    "\n",
+    "# Adjust layout to prevent overlap\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
    ]
   },
   {
