--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -4693,12 +4693,17 @@
     "- **Hyperparameter tuning**:\n",
     "    - Perform hyperparameter tuning using grid search with `sklearn` `GridSearchCV` or random search with `RandomizedSearchCV`.\n",
     "- **Model evaluation**:\n",
-    "    - Regression task: Use evaluation metrics such as RMSE, MAPE, or R-squared with `sklearn` `mean_squared_error`, `mean_absolute_percentage_error`, or `r2_score`.\n",
-    "    - Classification task: Use metrics like accuracy, precision, recall, or F1-score with `sklearn` `classification_report`, `confusion_matrix`, and `ConfusionMatrixDisplay`.\n",
+    "    - Regression task:\n",
+    "        - Metrics: Calculate RMSE, MAPE, and R-squared with `sklearn` `mean_squared_error`, `mean_absolute_percentage_error`, and `r2_score`.\n",
+    "        - Analyze errors with residual plots, error distributions, and feature-error relationships using `pandas`, `seaborn`, and `matplotlib`.\n",
+    "    - Classification task:\n",
+    "        - Metrics: Create classification report with accuracy, precision, recall, and F1-score using `sklearn` `classification_report`.\n",
+    "        - Analyze misclassifications using a confusion matrix with `sklearn` `confusion_matrix` and `ConfusionMatrixDisplay`.\n",
+    "        - Explore feature-misclassification relationships using `pandas`, `seaborn`, and `matplotlib`.\n",
     "- **Feature importance**:\n",
     "    - Visualize feature importances using `seaborn` and `matplotlib` or `xgboost` `plot_importance`.\n",
     "- **Save the final model**:\n",
-    "    - Save the best-performing model as a a .pkl file using `pickle`.\n",
+    "    - Save the best-performing model as a .pkl file using `pickle`.\n",
     "\n",
     "## Next Steps\n",
     "- Add model prediction examples for the final model in regression and classification.\n",
