--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -4610,6 +4610,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e6ce84fa-2c0b-4f95-9131-f8322d28e601",
+   "metadata": {},
+   "source": [
+    "**Identify Best, Worst, and Typical Cases**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beea3356-5578-4a61-b599-7a924cb4430d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get top 5 most important features\n",
+    "# Note: Ensure feature_importance_df was created in feature importance section \n",
+    "top5_features = feature_importance_df.sort_values(\"importance\", ascending=False).head(5)[\"feature\"]\n",
+    "\n",
+    "# Keep only top 5 features and error metrics\n",
+    "# Note: Ensure df_test was created in model evaluation section \n",
+    "columns_to_keep = list(top5_features) + [\"Actual\", \"Predicted\", \"Misclassification\"]\n",
+    "df_test = df_test[columns_to_keep]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8dcc2ed5-4d97-478f-ac1b-725a6de4fbd1",
    "metadata": {},
    "source": [
