--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -4630,7 +4630,11 @@
     "# Keep only top 5 features and error metrics\n",
     "# Note: Ensure df_test was created in model evaluation section \n",
     "columns_to_keep = list(top5_features) + [\"Actual\", \"Predicted\", \"Misclassification\"]\n",
-    "df_test = df_test[columns_to_keep]"
+    "df_test = df_test[columns_to_keep]\n",
+    "\n",
+    "# Get confidence scores for predictions\n",
+    "# Ensure final_model supports `predict_proba` and X_test_transformed is correctly preprocessed\n",
+    "df_test[\"Confidence\"] = final_model.predict_proba(X_test_transformed).max(axis=1)"
    ]
   },
   {
