--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3151,7 +3151,7 @@
     "# Keep only top 5 features and error metrics\n",
     "# Note: Ensure df_test was created in model evaluation section \n",
     "columns_to_keep = list(top5_features) + [\"Actual\", \"Predicted\", \"Error\", \"Absolute Error\", \"Error (%)\"]\n",
-    "df_test = df_test[columns_to_keep]\n",
+    "df_test = df_test[columns_to_keep].copy()\n",
     "\n",
     "# Best cases: Top 10 cases with smallest errors\n",
     "print(\"Best cases:\")\n",
