In machine_learning_template.ipynb, in Modeling (Classification) > Final Model > Model Prediction Examples section, show top 10 typical cases

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -4642,7 +4642,13 @@
     "\n",
     "# Worst cases: Top 10 misclassified cases despite high confidence scores\n",
     "print(\"Worst cases:\")\n",
-    "print(df_test[df_test[\"Misclassification\"] == True].sort_values(\"Confidence\", ascending=False).head(10))"
+    "print(df_test[df_test[\"Misclassification\"] == True].sort_values(\"Confidence\", ascending=False).head(10))\n",
+    "\n",
+    "# Typical cases: 10 cases closest to the mean confidence score\n",
+    "mean_confidence = df_test[\"Confidence\"].mean()\n",
+    "df_test[\"Difference from Mean Confidence\"] = np.abs(df_test[\"Confidence\"] - mean_confidence)\n",
+    "print(\"Typical cases:\")\n",
+    "print(df_test.sort_values(\"Difference from Mean Confidence\").head(10))"
    ]
   },
   {
