In machine_learning_template.ipynb, in Summary > Modeling section, update model evaluation

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -4761,10 +4761,10 @@
     "    - Perform hyperparameter tuning using grid search with `sklearn` `GridSearchCV` or random search with `RandomizedSearchCV`.\n",
     "- **Model evaluation**:\n",
     "    - Regression task:\n",
-    "        - Metrics: Calculate RMSE, MAPE, and R-squared with `sklearn` `mean_squared_error`, `mean_absolute_percentage_error`, and `r2_score`.\n",
+    "        - Calculate metrics such as RMSE, MAPE, and R-squared with `sklearn` `mean_squared_error`, `mean_absolute_percentage_error`, and `r2_score`.\n",
     "        - Analyze errors with residual plots, error distributions, and feature-error relationships using `pandas`, `seaborn`, and `matplotlib`.\n",
     "    - Classification task:\n",
-    "        - Metrics: Create classification report with accuracy, precision, recall, and F1-score using `sklearn` `classification_report`.\n",
+    "        - Create classification report with metrics like accuracy, precision, recall, and F1-score using `sklearn` `classification_report`.\n",
     "        - Analyze misclassifications using a confusion matrix with `sklearn` `confusion_matrix` and `ConfusionMatrixDisplay`.\n",
     "        - Explore feature-misclassification relationships using `pandas`, `seaborn`, and `matplotlib`.\n",
     "- **Feature importance**:\n",
